--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,11 @@
     "topText": "New to DABubble?",
     "topText2": "Create account",
     "errorText": "*Email is required.",
-    "errorText2": "*Password is required."
+    "errorText2": "*Password is required.",
+    "errorText3": "*Invalid login credentials.",
+    "errorText4": "*Too many failed login attempts.",
+    "errorText5": "*Please check your entries.",
+    "errorText6": "*Please try again later."
   },
 
   "createAccount": {
