improved date formatting and translation handling

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -217,6 +217,32 @@
     "message": "Direktnachrichten"
   },
 
+  "weekdays": {
+    "monday": "Montag",
+    "tuesday": "Dienstag",
+    "wednesday": "Mittwoch",
+    "thursday": "Donnerstag",
+    "friday": "Freitag",
+    "saturday": "Samstag",
+    "sunday": "Sonntag",
+    "today": "Heute"
+  },
+
+  "months": {
+    "jan": "Jan.",
+    "feb": "Feb.",
+    "mar": "Mär.",
+    "apr": "Apr.",
+    "may": "Mai",
+    "jun": "Jun.",
+    "jul": "Jul.",
+    "aug": "Aug.",
+    "sep": "Sep.",
+    "oct": "Okt.",
+    "nov": "Nov.",
+    "dec": "Dez."
+  },
+
   "imprint": {
     "headline": "Imprint",
     "tmg": "Angaben gemäß §5 TMG",
