display chat answers updated

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -131,8 +131,7 @@
   },
 
   "secondary-chat": {
-    "thread": "Thema",
-    "answer": "Antworten"
+    "thread": "Thema"
   },
 
   "add-new-channel": {
