Fix: Changed hint text when the sidebar menu is open or closed.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -166,7 +166,8 @@
   },
 
   "sidebar-toggle": {
-    "openWorkspace": "Menü öffnen"
+    "openWorkspace": "Menü öffnen",
+    "closeWorkspace": "Menü schließen"
   },
 
   "edit-user-details": {
